<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CSVProcess" Id="{69c53c48-021c-4aea-9833-ec2a6a27b5b9}">
    <Declaration><![CDATA[TYPE ST_CSVProcess :
STRUCT
	//INPUTS
	bWriteData			: BOOL;
	sFileName1			: T_MaxString := 'C:\Users\Sebastian.Ulloa\Desktop\CSV_TEST\TemplateTest\CSV\Csv_Test';
	sFileName2			: T_MaxString := '.csv';
	//OUTPUTS
	bError				: BOOL;
	bBusy				: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>