<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CycleData" Id="{55f28d2e-fb51-4eb3-b909-a265f2991986}">
    <Declaration><![CDATA[TYPE ST_CycleData :
STRUCT
//-----------------------------------------------------------------------------------GENERAL------------------------------------------------------------------------------------//	

	bPass				: BOOL;
	bFail				: BOOL;	
	sData				: STRING;	
	sTime				: STRING;
	
//-----------------------------------------------------------------------------------STATION 1------------------------------------------------------------------------------------//
/////////////////////////////////////////////////////////////////////////////////////SETTINGS/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************CURRENT SETTINGS DURING CYCLE. VELOCITY FOR EXAMPLE****************************************************)	
	
	sSetting1_1			: STRING;	
	nSetting2_1			: DINT;
	bSetting3_1			: BOOL;
	
/////////////////////////////////////////////////////////////////////////////////////GENERAL DATA/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************RESULT DATA OF THE CYCLE. DISTANCE FOR EXAMPLE************************************************************)	
	
	sDATA1_1			: STRING;
	nDATA2_1			: DINT;
	bDATA3_1			: BOOL;

////////////////////////////////////////////////////////////////////////////////////RESULTS////////////////////////////////////////////////////////////////////////////////////////
(**************************************************************************DETERMINE IF THE PART FAIL OR PASS*********************************************************************)

	bPass_1				: BOOL;
	bFail_1				: BOOL;		


	
	
	
//-----------------------------------------------------------------------------------STATION 2------------------------------------------------------------------------------------//
/////////////////////////////////////////////////////////////////////////////////////SETTINGS/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************CURRENT SETTINGS DURING CYCLE. VELOCITY FOR EXAMPLE****************************************************)	
	
	sSetting1_2			: STRING;	
	nSetting2_2			: DINT;
	bSetting3_2			: BOOL;
	
/////////////////////////////////////////////////////////////////////////////////////GENERAL DATA/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************RESULT DATA OF THE CYCLE. DISTANCE FOR EXAMPLE************************************************************)	
	
	sDATA1_2			: STRING;
	nDATA2_2			: DINT;
	bDATA3_2			: BOOL;

////////////////////////////////////////////////////////////////////////////////////RESULTS////////////////////////////////////////////////////////////////////////////////////////
(**************************************************************************DETERMINE IF THE PART FAIL OR PASS*********************************************************************)

	bPass_2				: BOOL;
	bFail_2				: BOOL;		
	
	
	
	
	
//-----------------------------------------------------------------------------------STATION 3------------------------------------------------------------------------------------//
/////////////////////////////////////////////////////////////////////////////////////SETTINGS/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************CURRENT SETTINGS DURING CYCLE. VELOCITY FOR EXAMPLE****************************************************)	
	
	sSetting1_3			: STRING;	
	nSetting2_3			: DINT;
	bSetting3_3			: BOOL;
	
/////////////////////////////////////////////////////////////////////////////////////GENERAL DATA/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************RESULT DATA OF THE CYCLE. DISTANCE FOR EXAMPLE************************************************************)	
	
	sDATA1_3			: STRING;
	nDATA2_3			: DINT;
	bDATA3_3			: BOOL;

////////////////////////////////////////////////////////////////////////////////////RESULTS////////////////////////////////////////////////////////////////////////////////////////
(**************************************************************************DETERMINE IF THE PART FAIL OR PASS*********************************************************************)

	bPass_3				: BOOL;
	bFail_3				: BOOL;		
	



	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>