<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CycleDataStation2" Id="{9fa01127-d8b3-4cd4-8460-18bade0da36e}">
    <Declaration><![CDATA[TYPE ST_CycleDataStation2 :
STRUCT
	/////////////////////////////////////////////////////////////////////////////////////SETTINGS/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************CURRENT SETTINGS DURING CYCLE. VELOCITY FOR EXAMPLE****************************************************)	
	
	sSetting1			: STRING;	
	nSetting2			: DINT;
	bSetting3			: BOOL;
	
/////////////////////////////////////////////////////////////////////////////////////GENERAL DATA/////////////////////////////////////////////////////////////////////////////////////			
(**************************************************************************RESULT DATA OF THE CYCLE. DISTANCE FOR EXAMPLE************************************************************)	
	
	sDATA1				: STRING;
	nDATA2				: DINT;
	bDATA3				: BOOL;

////////////////////////////////////////////////////////////////////////////////////RESULTS////////////////////////////////////////////////////////////////////////////////////////
(**************************************************************************DETERMINE IF THE PART FAIL OR PASS*********************************************************************)

	bPass				: BOOL;
	bFail				: BOOL;		

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>