<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_Stations" Id="{51987edd-ecbc-463a-bda0-55117182c9fa}">
    <Declaration><![CDATA[VAR_GLOBAL
/////////////////////////////////////////////////////////////////////////////////////Station 1/////////////////////////////////////////////////////////////////////////////////////
	
	stStation1							: ST_Station_1;
	CMD_Station1						: ST_StationCMD;
	stCycleDataStation1					: ST_CycleDataStation1;
	
/////////////////////////////////////////////////////////////////////////////////////Station 2/////////////////////////////////////////////////////////////////////////////////////

	stStation2							: ST_Station_2;
	CMD_Station2						: ST_StationCMD;
	stCycleDataStation2					: ST_CycleDataStation2;

/////////////////////////////////////////////////////////////////////////////////////Station 3/////////////////////////////////////////////////////////////////////////////////////

	stStation3							: ST_Station_3;	
	CMD_Station3						: ST_StationCMD;
	stCycleDataStation3					: ST_CycleDataStation3;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>